--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <p class="socialIcon card-text">
                     <a href="https://www.facebook.com/doming.brandt" class="white"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.instagram.com/ming0brandt/" class="white"><i class="fa fa-instagram"></i></a>
-                    <a class="white"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/domingobrandt" class="white"><i class="fa fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/domingo-brandt-98888b113" class="white"><i class="fa fa-linkedin"></i></a>
                   </p>
                 </div>
